<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DescriptionActivity">

    <ImageView
        android:id="@+id/image_view_detailed_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:background="@color/cardview_dark_background"
        android:contentDescription="@string/content_description_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_exit_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description_exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/text_view_detailed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="130dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"

        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_detailed_avatar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_detailed_name">

        <TableRow>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/text_view_detailed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow android:layout_marginTop="15dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/text_view_detailed_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow android:layout_marginTop="15dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/created"/>

            <TextView
                android:id="@+id/text_view_detailed_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow android:layout_marginTop="15dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/guid"/>

            <TextView
                android:id="@+id/text_view_detailed_guid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/desc"/>

            <TextView
                android:id="@+id/text_view_detailed_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>