<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="141dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:layout_marginStart="14dp"
        android:contentDescription="@string/content_description_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cardview_dark_background"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="14dp"
        android:layout_marginVertical="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_username"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingHorizontal="10dp"
            android:text="@string/username"
            android:gravity="center_vertical"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/cardview_light_background"
            android:layout_marginBottom="1dp"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingHorizontal="10dp"
            android:text="@string/email"
            android:gravity="center_vertical"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingHorizontal="10dp"
            android:text="@string/title"
            android:gravity="center_vertical"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/cardview_light_background"
            android:layout_marginTop="1dp"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>